--- a/config.env
+++ b/config.env
@@ -1,71 +1,81 @@
-# Project Variables
+# config.env
+
+# Step 1: Project Variables
 PROJECT_NAME=WonCex
 DOMAIN=trade.wonnetwork.org
 ADMIN_BASE_URL=admin
 ADMIN_USER=admin@exchange.net
-ADMIN_MASTERPASS=supersecretpassword
+ADMIN_MASTERPASS=Vuongdev123
 SUPPORT_EMAIL=support@exchange.net
 
-# Common Services
+# Social Media URLs
+TELEGRAM=opencex
+FACEBOOK=polygant
+TWITTER=polygant
+LINKEDIN=polygant
+LOGO=
+
+# Step 2: Common Services
 RECAPTCHA=your-recaptcha-key
 RECAPTCHA_SECRET=your-recaptcha-secret
 TELEGRAM_CHAT_ID=your-telegram-chat-id
 TELEGRAM_ALERTS_CHAT_ID=your-telegram-alerts-chat-id
 TELEGRAM_BOT_TOKEN=your-telegram-bot-token
 
-# Blockchain Services
+# Step 3: Blockchain Services
 INFURA_API_KEY=your-infura-api-key
 INFURA_API_SECRET=your-infura-api-secret
-ETHERSCAN_KEY=your-etherscan-api-key
+ETHERSCAN_KEY=your-etherscan-key
 
-# Safe Addresses
+# Step 4: Safe Addresses
 BTC_SAFE_ADDR=your-btc-safe-address
-ETH_SAFE_ADDR=your-eth-safe-address
+ETH_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
 
-# Binance BSC Blockchain
+# Step 5: Binance BSC Blockchain
 ENABLED_BNB=True
-BSCSCAN_KEY=your-bscscan-api-key
-BNB_SAFE_ADDR=your-bnb-safe-address
+BSCSCAN_KEY=P4X2EVKCNTHSRTIHHRMZ45661ITEXKKZDF
+BNB_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
 
-# Tron Blockchain
-ENABLED_TRON=True
+# Step 6: Tron Blockchain
+ENABLED_TRON=False
 TRONGRID_API_KEY=your-trongrid-api-key
 TRX_SAFE_ADDR=your-trx-safe-address
 
-# Won Blockchain
+# Step 7: Won Blockchain
 ENABLED_WON=True
-WONSCAN_KEY=your-wonscan-api-key
-WON_SAFE_ADDR=your-won-safe-address
+COMMON_TASKS_WON=True
+WONSCAN_KEY=29b1b996-ed19-413e-bd68-edd9bc49b43a
+WON_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
 
-# Email Service
+# Step 8: Email Service
 EMAIL_HOST=smtp.your-email-provider.com
 EMAIL_HOST_USER=your-email@example.com
 EMAIL_HOST_PASSWORD=your-email-password
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 
-# SMS Service (Twilio)
-IS_SMS_ENABLED=True
+# Step 9: SMS Service (Twilio)
+IS_SMS_ENABLED=False
 TWILIO_ACCOUNT_SID=your-twilio-account-sid
 TWILIO_AUTH_TOKEN=your-twilio-auth-token
 TWILIO_VERIFY_SID=your-twilio-verify-sid
 TWILIO_PHONE=your-twilio-phone-number
 
-# KYC Provider (Sumsub)
-IS_KYC_ENABLED=True
+# Step 10: KYC Provider SumSub
+IS_KYC_ENABLED=False
 SUMSUB_SECRET_KEY=your-sumsub-secret-key
 SUMSUB_APP_TOKEN=your-sumsub-app-token
 SUMSUM_CALLBACK_VALIDATION_SECRET=your-sumsub-callback-validation-secret
 
-# KYT Provider (Scorechain)
-IS_KYT_ENABLED=True
+# Step 11: KYT Provider Scorechain
+IS_KYT_ENABLED=False
 SCORECHAIN_BITCOIN_TOKEN=your-scorechain-bitcoin-token
 SCORECHAIN_ETHEREUM_TOKEN=your-scorechain-ethereum-token
 SCORECHAIN_TRON_TOKEN=your-scorechain-tron-token
 SCORECHAIN_BNB_TOKEN=your-scorechain-bnb-token
 
 # Market Making Bot (Hummingbot)
-IS_HUMMINGBOT_ENABLED=True
+IS_HUMMINGBOT_ENABLED=False
 
 # Instance name
 INSTANCE_NAME=opencex
