--- a/config.env
+++ b/config.env
@@ -4,31 +4,31 @@
 PROJECT_NAME=WonCex
 DOMAIN=trade.wonnetwork.org
 ADMIN_BASE_URL=admin
-ADMIN_USER=admin@exchange.net
+ADMIN_USER=hello@wonnetwork.org
 ADMIN_MASTERPASS=Vuongdev123
-SUPPORT_EMAIL=support@exchange.net
+SUPPORT_EMAIL=hello@wonnetwork.org
 
 # Social Media URLs
-TELEGRAM=opencex
-FACEBOOK=polygant
-TWITTER=polygant
-LINKEDIN=polygant
+TELEGRAM=WonCommunity
+FACEBOOK=WonNetworkEcoSystem
+TWITTER=Won_Network
+LINKEDIN=won-network-ecosystem
 LOGO=
 
 # Step 2: Common Services
-RECAPTCHA=your-recaptcha-key
-RECAPTCHA_SECRET=your-recaptcha-secret
-TELEGRAM_CHAT_ID=your-telegram-chat-id
-TELEGRAM_ALERTS_CHAT_ID=your-telegram-alerts-chat-id
-TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+RECAPTCHA=6LfYc58pAAAAAOitqhJilkLZdeTRRlQK60vJ5Hwy
+RECAPTCHA_SECRET=6LfYc58pAAAAAHH8zkAQO8iKnSh6FQDQqk_vWGN0
+TELEGRAM_CHAT_ID=231399891
+TELEGRAM_ALERTS_CHAT_ID=6481299395
+TELEGRAM_BOT_TOKEN=6481299395:AAHJyjZPLqG1hesTCguI6gZdGop2LNTE6zo
 
 # Step 3: Blockchain Services
-INFURA_API_KEY=your-infura-api-key
-INFURA_API_SECRET=your-infura-api-secret
-ETHERSCAN_KEY=your-etherscan-key
+INFURA_API_KEY=54a13a85fbaa45a7a0437a45e890f694
+INFURA_API_SECRET=WzLGD6c01IB81XSXeH7RVBTkOm/hoaDm77WP2Wvj1/2nd2o3HA9fOwe
+ETHERSCAN_KEY=S1A72BKRI9FXF24J3PMYY2TV28G1Q5PN5J
 
 # Step 4: Safe Addresses
-BTC_SAFE_ADDR=your-btc-safe-address
+BTC_SAFE_ADDR=bc1qdldvzxffk62lp5zy9343vz52h7382m2q4nxxg2
 ETH_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
 
 # Step 5: Binance BSC Blockchain
@@ -48,10 +48,10 @@ WONSCAN_KEY=29b1b996-ed19-413e-bd68-edd9bc49b43a
 WON_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
 
 # Step 8: Email Service
-EMAIL_HOST=smtp.your-email-provider.com
-EMAIL_HOST_USER=your-email@example.com
-EMAIL_HOST_PASSWORD=your-email-password
-EMAIL_PORT=587
+EMAIL_HOST=mail.privateemail.com
+EMAIL_HOST_USER=hello@wonnetwork.org
+EMAIL_HOST_PASSWORD=Vuongdev123
+EMAIL_PORT=465
 EMAIL_USE_TLS=True
 
 # Step 9: SMS Service (Twilio)
