--- a/config.env
+++ b/config.env
@@ -9,15 +9,15 @@ ADMIN_MASTERPASS=Vuongdev123
 SUPPORT_EMAIL=hello@wonnetwork.org
 
 # Social Media URLs
-TELEGRAM=WonCommunity
-FACEBOOK=WonNetworkEcoSystem
-TWITTER=Won_Network
-LINKEDIN=won-network-ecosystem
+TELEGRAM=
+FACEBOOK=
+TWITTER=
+LINKEDIN=
 LOGO=
 
 # Step 2: Common Services
-RECAPTCHA=6LfYc58pAAAAAOitqhJilkLZdeTRRlQK60vJ5Hwy
-RECAPTCHA_SECRET=6LfYc58pAAAAAHH8zkAQO8iKnSh6FQDQqk_vWGN0
+RECAPTCHA=6Ld2F-kpAAAAAAidItFe5rjWq4frPOviQbikAxwt
+RECAPTCHA_SECRET=6Ld2F-kpAAAAAEAJXZ_-yVcA2MRtFFIPQAqI0MFn
 TELEGRAM_CHAT_ID=231399891
 TELEGRAM_ALERTS_CHAT_ID=6481299395
 TELEGRAM_BOT_TOKEN=6481299395:AAHJyjZPLqG1hesTCguI6gZdGop2LNTE6zo
