--- a/config.env
+++ b/config.env
@@ -9,9 +9,9 @@ ADMIN_MASTERPASS=Vuongdev123
 SUPPORT_EMAIL=hello@wonnetwork.org
 
 # Social Media URLs
-TELEGRAM=
-FACEBOOK=
-TWITTER=
+TELEGRAM=Wonnetwork
+FACEBOOK=Wonnetwork
+TWITTER=Wonnetwork
 LINKEDIN=
 LOGO=
 
@@ -51,7 +51,7 @@ WON_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
 EMAIL_HOST=mail.privateemail.com
 EMAIL_HOST_USER=hello@wonnetwork.org
 EMAIL_HOST_PASSWORD=Vuongdev123
-EMAIL_PORT=465
+EMAIL_PORT=587
 EMAIL_USE_TLS=True
 
 # Step 9: SMS Service (Twilio)
