--- a/config.env
+++ b/config.env
@@ -3,7 +3,7 @@
 # Step 1: Project Variables
 PROJECT_NAME=WonCex
 DOMAIN=trade.wonnetwork.org
-ADMIN_BASE_URL=admin
+ADMIN_BASE_URL=admin_panel
 ADMIN_USER=hello@wonnetwork.org
 ADMIN_MASTERPASS=Vuongdev123
 SUPPORT_EMAIL=hello@wonnetwork.org
