--- a/config.env
+++ b/config.env
@@ -48,10 +48,10 @@ WONSCAN_KEY=29b1b996-ed19-413e-bd68-edd9bc49b43a
 WON_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
 
 # Step 8: Email Service
-EMAIL_HOST=smtp.gmail.com
-EMAIL_HOST_USER=gyee2024@gmail.com
-EMAIL_HOST_PASSWORD=kbufkmcslgvkkigkp
-EMAIL_PORT=465
+EMAIL_HOST=smtp-relay.brevo.com
+EMAIL_HOST_USER=7585d3001@smtp-brevo.com
+EMAIL_HOST_PASSWORD=rGfVDWjzTvXaxOHU
+EMAIL_PORT=587
 EMAIL_USE_TLS=True
 
 # Step 9: SMS Service (Twilio)
