--- a/config copy.env
+++ b/config copy.env
@@ -42,10 +42,10 @@ TRONGRID_API_KEY=your-trongrid-api-key
 TRX_SAFE_ADDR=your-trx-safe-address
 
 # Step 7: Won Blockchain
-ENABLED_MATIC=True
-COMMON_TASKS_MATIC=True
-POLYGONSCAN_KEY=29b1b996-ed19-413e-bd68-edd9bc49b43a
-MATIC_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
+ENABLED_WON=True
+COMMON_TASKS_WON=True
+WONSCAN_KEY=29b1b996-ed19-413e-bd68-edd9bc49b43a
+WON_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
 
 # Step 8: Email Service
 EMAIL_HOST=smtp-relay.brevo.com
