--- a/config.env
+++ b/config.env
@@ -36,6 +36,12 @@ ENABLED_BNB=True
 BSCSCAN_KEY=P4X2EVKCNTHSRTIHHRMZ45661ITEXKKZDF
 BNB_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
 
+# Step 5.11: Binance BSC Blockchain
+ENABLED_WON=True
+COMMON_TASKS_WON=True
+WONSCAN_KEY=29b1b996-ed19-413e-bd68-edd9bc49b43a
+WON_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
+
 # Step 6: Tron Blockchain
 ENABLED_TRON=False
 TRONGRID_API_KEY=your-trongrid-api-key
@@ -44,7 +50,7 @@ TRX_SAFE_ADDR=your-trx-safe-address
 # Step 7: Won Blockchain
 ENABLED_MATIC=True
 COMMON_TASKS_MATIC=True
-POLYGONSCAN_KEY=29b1b996-ed19-413e-bd68-edd9bc49b43a
+POLYGONSCAN_KEY=B9IG9RC6EPZ5TG53FJB51AN8DMD76VG3J4
 MATIC_SAFE_ADDR=0x4bDEa95eb7c4E57D60eeBBD8Cec5e907991bEE77
 
 # Step 8: Email Service
